--- a/.htaccess
+++ b/.htaccess
@@ -1,18 +1,10 @@
 <IfModule mod_rewrite.c>
-    RRewriteEngine On
-
-    RewriteCond %{REQUEST_URI} ^system.*
-    RewriteRule ^(.*)$ /index.php?/$1 [L]
-
-    RewriteCond %{REQUEST_URI} ^application.*
-    RewriteRule ^(.*)$ /index.php?/$1 [L]
-
-    RewriteCond %{REQUEST_URI} ^asset.*
-    RewriteRule ^(.*)$ /index.php?/$1 [L]
-
+    RewriteEngine on
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php/$1 [L]
+    RewriteCond $1 !^(index\.php|images|asset|uploads|robots\.txt)
+    #RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+    RewriteRule ^(.*)$ /index.php?/$1 [L]
 
 
 </IfModule>
