--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond $1 !^(index\.php|images|asset|uploads|robots\.txt)
     #RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-    RewriteRule ^(.*)$ /index.php?/$1 [L]
+    RewriteRule ^(.*)$ /index.php?/$1 [L,QSA]
 
 
 </IfModule>
