--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,7 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond $1 !^(index\.php|images|asset|uploads|robots\.txt)
-    #RewriteRule ^(.*)$ index.php/$1 [L,QSA]
-    RewriteRule ^(.*)$ /index.php?/$1 [L,QSA]
+    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 
 
 </IfModule>
