--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,16 @@
 <IfModule mod_rewrite.c>
+
+    #RewriteEngine on
+    #RewriteCond %{REQUEST_FILENAME} !-f
+    #RewriteCond %{REQUEST_FILENAME} !-d
+    #RewriteCond $1 !^(index\.php|images|asset|uploads|robots\.txt)
+    #RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+
     RewriteEngine on
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond $1 !^(index\.php|images|asset|uploads|robots\.txt)
-    RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+    RewriteRule .* index.php/$0 [PT,L]
 
 
 </IfModule>
